docs/src/app.css
/* ... */
@utility extend-touch-target {
	@media (pointer: coarse) {
		@apply relative touch-manipulation after:absolute after:-inset-2;
	}
}

@layer components {
	.steps {
		&:first-child {
			@apply !mt-0;
		}

		&:first-child > *[aria-level="3"]:first-child {
			@apply !mt-0;
		}

		> *[aria-level="3"] {
			@apply !mt-16;
		}

		> *[aria-level="3"] + p {
			@apply !mt-2;
		}
	}

	[data-rehype-pretty-code-figure] {
		background-color: var(--color-code);
		color: var(--color-code-foreground);
		border-radius: var(--radius-xl);
		border-width: 0px;
		border-color: var(--border);
		margin-top: calc(var(--spacing) * 6);
		overflow: hidden;
		font-size: var(--text-sm);
		outline: none;
		position: relative;
		@apply -mx-1;

		&:has([data-rehype-pretty-code-title]) [data-slot="copy-button"] {
			top: calc(var(--spacing) * 1.5) !important;
		}
	}

	[data-rehype-pretty-code-figure] code,
	[data-rehype-pretty-code-figure] code span {
		font-variant-ligatures: none;
		font-feature-settings:
			"liga" 0,
			"calt" 0;
	}

	[data-rehype-pretty-code-title] {
		border-bottom: color-mix(in oklab, var(--border) 30%, transparent);
		border-bottom-width: 1px;
		border-bottom-style: solid;
		padding-block: calc(var(--spacing) * 2.5);
		padding-inline: calc(var(--spacing) * 4);
		font-size: var(--text-sm);
		font-family: var(--font-mono);
		color: var(--color-code-foreground);
	}

	[data-line-numbers] {
		display: grid;
		min-width: 100%;
		white-space: pre;
		border: 0;
		background: transparent;
		padding: 0;
		counter-reset: line;
		box-decoration-break: clone;
	}

	[data-line-numbers] [data-line]::before {
		font-size: var(--text-sm);
		counter-increment: line;
		content: counter(line);
		display: inline-block;
		width: calc(var(--spacing) * 16);
		padding-right: calc(var(--spacing) * 6);
		text-align: right;
		color: var(--color-code-number);
		background-color: var(--color-code);
		position: sticky;
		left: 0;
	}

	[data-line-numbers] [data-highlighted-line][data-line]::before {
		background-color: var(--color-code-highlight);
	}

	[data-line] {
		padding-top: calc(var(--spacing) * 0.5);
		padding-bottom: calc(var(--spacing) * 0.5);
		min-height: calc(var(--spacing) * 1);
		width: 100%;
		display: inline-block;
	}

	[data-rehype-pretty-code-figure] pre[data-language="text"] code,
	[data-rehype-pretty-code-figure] pre[data-language="plaintext"] code,
	[data-slot="docs"] pre[data-language="text"] code,
	[data-slot="docs"] pre[data-language="plaintext"] code {
		display: block !important;
		white-space: pre;
		line-height: 0.95;
		font-family:
			ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
			monospace;
		font-variant-ligatures: none;
	}

	[data-rehype-pretty-code-figure] pre[data-language="text"] [data-line],
	[data-rehype-pretty-code-figure] pre[data-language="plaintext"] [data-line],
	[data-rehype-pretty-code-figure] code[data-language="text"] [data-line],
	[data-rehype-pretty-code-figure] code[data-language="plaintext"] [data-line],
	[data-slot="docs"] pre[data-language="text"] [data-line],
	[data-slot="docs"] pre[data-language="plaintext"] [data-line] {
		padding-top: 0;
		padding-bottom: 0;
		min-height: unset;
		line-height: 0.95;
		display: block;
	}

	[data-line] span {
		color: var(--shiki-light);

		@variant dark {
			color: var(--shiki-dark) !important;
		}
	}

	[data-highlighted-line],
	[data-highlighted-chars] {
		position: relative;
		background-color: var(--color-code-highlight);
	}

	[data-highlighted-line] {
		&:after {
			position: absolute;
			top: 0;
			left: 0;
			width: 2px;
			height: 100%;
			content: "";
			background-color: color-mix(in oklab, var(--muted-foreground) 50%, transparent);
		}
	}

	[data-highlighted-chars] {
		border-radius: var(--radius-sm);
		padding-inline: 0.3rem;
		padding-block: 0.1rem;
		font-family: var(--font-mono);
		font-size: 0.8rem;
	}

	.mdsx code:not(pre code) {
		@apply bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] outline-none;
	}

	.super-debug {
		background-color: var(--color-zinc-950) !important;
		color: #fff8 !important;
	}

	.super-debug--pre {
		background-color: transparent !important;
		color: #fff8 !important;
	}

	.super-debug--code {
		background-color: transparent !important;
	}

	.super-debug--code .key {
		color: #fff8 !important;
	}

	.super-debug--code .undefined {
		color: #fff8 !important;
	}

	.super-debug--code .string {
		color: #fff8 !important;
	}

	.super-debug--code .number {
		color: #fff8 !important;
	}

	.super-debug--code .boolean {
		color: #fff8 !important;
	}

	.super-debug--code .boolean {
		color: #fff8 !important;
	}
}

